--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Project Showcase</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <!-- Google Fonts for modern typography -->
@@ -48,31 +48,31 @@
                     <div class="deluxe-card">
                         <img src="https://simpleicons.org/icons/amazons3.svg" alt="Amazon S3" class="card-icon">
                         <h3>Amazon S3</h3>
-                        <p>Scalable object storage for data backup, archiving, and analytics.</p>
+                        <p>Scalable object storage for data backup and analytics.</p>
                         <a href="https://aws.amazon.com/s3/" target="_blank" class="card-cta">Learn More</a>
                     </div>
                     <div class="deluxe-card">
                         <img src="https://simpleicons.org/icons/amazonec2.svg" alt="Amazon EC2" class="card-icon">
                         <h3>Amazon EC2</h3>
-                        <p>Resizable compute capacity in the cloud for virtually any workload.</p>
+                        <p>Resizable compute capacity for diverse workloads.</p>
                         <a href="https://aws.amazon.com/ec2/" target="_blank" class="card-cta">Learn More</a>
                     </div>
                     <div class="deluxe-card">
                         <img src="https://simpleicons.org/icons/awslambda.svg" alt="AWS Lambda" class="card-icon">
                         <h3>AWS Lambda</h3>
-                        <p>Run code without provisioning or managing servers.</p>
+                        <p>Serverless computing for event-driven applications.</p>
                         <a href="https://aws.amazon.com/lambda/" target="_blank" class="card-cta">Learn More</a>
                     </div>
                     <div class="deluxe-card">
                         <img src="https://simpleicons.org/icons/amazonrds.svg" alt="Amazon RDS" class="card-icon">
                         <h3>Amazon RDS</h3>
-                        <p>Managed relational database service for easy scaling.</p>
+                        <p>Managed relational database service for scalability.</p>
                         <a href="https://aws.amazon.com/rds/" target="_blank" class="card-cta">Learn More</a>
                     </div>
                     <div class="deluxe-card">
                         <img src="https://simpleicons.org/icons/amazondynamodb.svg" alt="Amazon DynamoDB" class="card-icon">
                         <h3>Amazon DynamoDB</h3>
-                        <p>Fast, flexible NoSQL database for high-performance apps.</p>
+                        <p>Fast NoSQL database for high-performance apps.</p>
                         <a href="https://aws.amazon.com/dynamodb/" target="_blank" class="card-cta">Learn More</a>
                     </div>
                 </div>
