--- a/index.html
+++ b/index.html
@@ -211,6 +211,19 @@
                 <p class="progress">Progress: 1/3 Levels Unlocked</p>
             </div>
         </section>
+
+        <!-- Item Expander Section -->
+        <section id="expander-section" class="glass fade-in">
+            <h2>Additional Insights</h2>
+            <div class="expander">
+                <button class="expander-toggle">Expand Details <i class="fas fa-chevron-down"></i></button>
+                <div class="expander-content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p>Quisque eget nunc lobortis, scelerisque felis ut, pharetra nunc. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Proin sodales ultricies odio, id facilisis nulla. Curabitur auctor, metus id lacinia vulputate, nunc justo bibendum libero, vel consequat lorem nisl vel lorem.</p>
+                    <p>Aenean euismod, mi at hendrerit posuere, nunc metus finibus purus, eget eleifend odio felis nec justo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
@@ -269,6 +282,17 @@
                     currentIndex--;
                     updateSlider();
                 }
+            });
+
+            // Item Expander
+            const expanderToggles = document.querySelectorAll('.expander-toggle');
+            expanderToggles.forEach(toggle => {
+                toggle.addEventListener('click', () => {
+                    const content = toggle.nextElementSibling;
+                    const isOpen = content.style.maxHeight !== '0px';
+                    content.style.maxHeight = isOpen ? '0' : content.scrollHeight + 'px';
+                    toggle.classList.toggle('open');
+                });
             });
 
             // AWS Slider Random Selection
