--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Project Showcase</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <!-- Google Fonts for modern typography -->
@@ -39,11 +39,10 @@
             </div>
         </section>
 
-        <!-- Deluxe Cards Slider Section -->
+        <!-- Deluxe Cards Slider Section (Updated with bigger cards and bottom navigation) -->
         <section id="deluxe-cards-slider" class="fade-in">
             <h2>Explore AWS Services</h2>
             <div class="cards-slider-container">
-                <button class="slider-nav prev" aria-label="Previous Card"><i class="fas fa-chevron-left"></i></button>
                 <div class="cards-slider">
                     <div class="deluxe-card">
                         <img src="https://simpleicons.org/icons/amazons3.svg" alt="Amazon S3" class="card-icon">
@@ -76,6 +75,7 @@
                         <a href="https://aws.amazon.com/dynamodb/" target="_blank" class="card-cta">Learn More</a>
                     </div>
                 </div>
+                <button class="slider-nav prev" aria-label="Previous Card"><i class="fas fa-chevron-left"></i></button>
                 <button class="slider-nav next" aria-label="Next Card"><i class="fas fa-chevron-right"></i></button>
             </div>
         </section>
