--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </section>
 
-        <!-- Deluxe Cards Slider Section (Updated with bigger cards and bottom navigation) -->
+        <!-- Deluxe Cards Slider Section -->
         <section id="deluxe-cards-slider" class="fade-in">
             <h2>Explore AWS Services</h2>
             <div class="cards-slider-container">
@@ -222,6 +222,22 @@
                     <p>Quisque eget nunc lobortis, scelerisque felis ut, pharetra nunc. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Proin sodales ultricies odio, id facilisis nulla. Curabitur auctor, metus id lacinia vulputate, nunc justo bibendum libero, vel consequat lorem nisl vel lorem.</p>
                     <p>Aenean euismod, mi at hendrerit posuere, nunc metus finibus purus, eget eleifend odio felis nec justo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
                 </div>
+            </div>
+        </section>
+
+        <!-- CTA Section with New Button -->
+        <section id="cta-section" class="glass fade-in">
+            <div class="cta-container">
+                <a href="#contact" class="button-primary w-inline-block" style="opacity: 1;">
+                    <div class="button-text-wrapper align-center">
+                        <div class="text-size-small text-weight-medium">Book a 15-min call</div>
+                    </div>
+                    <div class="fill-top"></div>
+                    <div class="fill-bottom"></div>
+                    <div class="fill-left"></div>
+                    <div class="fill-right"></div>
+                    <div class="embed-border w-embed"></div>
+                </a>
             </div>
         </section>
     </main>
