--- a/examples/index.html
+++ b/examples/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3D Button</title>
+  <title>3D Button Example</title>
   <style>
     body {
       background-color: #121212;
@@ -13,11 +13,15 @@
       font-weight: 400;
       line-height: 1.2;
       text-transform: uppercase;
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     ._3d-button-wrapper {
-      position: absolute;
-      inset: auto 5% 5% auto;
+      position: relative;
       perspective: 1000px;
     }
 
