--- a/examples/index.html
+++ b/examples/index.html
@@ -3,80 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3D Button Hover Rotate</title>
+  <title>Visible 3D Button</title>
   <style>
     body {
       background-color: #121212;
-      color: #ccc;
-      font-family: 'IBM Plex Mono', monospace;
-      font-size: 1rem;
-      font-weight: 400;
-      line-height: 1.2;
-      text-transform: uppercase;
-      margin: 0;
-      height: 100vh;
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      font-family: 'IBM Plex Mono', monospace;
     }
 
-    ._3d-button-wrapper {
+    .button-wrapper {
       perspective: 1000px;
     }
 
-    ._3d-button {
-      display: inline-block;
-      transform-style: preserve-3d;
-      cursor: pointer;
-    }
-
-    ._3d-button-container {
-      position: relative;
-      width: 120px;
+    .button {
+      width: 160px;
       height: 60px;
-      transform-style: preserve-3d;
-      transform: rotateY(0deg);
-      transition: transform 1s ease;
-    }
-
-    ._3d-button:hover ._3d-button-container {
-      transform: rotateY(360deg);
-    }
-
-    ._3d-button-container div {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background-color: #2b2b2b;
+      background-color: #f7931e;
       color: white;
+      font-size: 1rem;
+      font-weight: bold;
+      border: none;
+      border-radius: 12px;
+      cursor: pointer;
+      transform-style: preserve-3d;
+      transition: transform 1s ease;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
       display: flex;
       align-items: center;
       justify-content: center;
-      border: 1px solid #444;
-      box-shadow: 0 0 5px rgba(0,0,0,0.5);
     }
 
-    .front-button { transform: translateZ(30px); }
-    .back-button { transform: translateZ(-30px) rotateY(180deg); }
-    .right-button { transform: rotateY(90deg) translateZ(60px); width: 60px; left: 60px; }
-    .left-button { transform: rotateY(-90deg) translateZ(0); width: 60px; }
-    .top-button { transform: rotateX(90deg) translateZ(60px); height: 60px; top: 0; }
-    .bottom-button { transform: rotateX(-90deg) translateZ(0); height: 60px; }
+    .button:hover {
+      transform: rotateY(360deg);
+    }
   </style>
 </head>
 <body>
 
-  <div class="_3d-button-wrapper">
-    <a href="#" class="_3d-button">
-      <div class="_3d-button-container">
-        <div class="front-button">↖</div>
-        <div class="back-button">↘</div>
-        <div class="right-button">X</div>
-        <div class="left-button">X</div>
-        <div class="top-button">X</div>
-        <div class="bottom-button">X</div>
-      </div>
-    </a>
+  <div class="button-wrapper">
+    <div class="button">
+      3D Button
+    </div>
   </div>
 
 </body>
