--- a/examples/index.html
+++ b/examples/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Visible 3D Button</title>
+  <title>Vertical 3D Flip Button</title>
   <style>
     body {
       background-color: #121212;
@@ -22,23 +22,38 @@
     .button {
       width: 160px;
       height: 60px;
+      position: relative;
+      transform-style: preserve-3d;
+      transition: transform 1s ease;
+      cursor: pointer;
+    }
+
+    .button-face {
+      position: absolute;
+      width: 100%;
+      height: 100%;
       background-color: #f7931e;
       color: white;
       font-size: 1rem;
       font-weight: bold;
-      border: none;
-      border-radius: 12px;
-      cursor: pointer;
-      transform-style: preserve-3d;
-      transition: transform 1s ease;
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
       display: flex;
       align-items: center;
       justify-content: center;
+      border-radius: 12px;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+      backface-visibility: hidden;
+    }
+
+    .front {
+      transform: rotateX(0deg) translateZ(30px);
+    }
+
+    .top {
+      transform: rotateX(90deg) translateZ(30px);
     }
 
     .button:hover {
-      transform: rotateY(360deg);
+      transform: rotateX(90deg);
     }
   </style>
 </head>
@@ -46,7 +61,8 @@
 
   <div class="button-wrapper">
     <div class="button">
-      3D Button
+      <div class="button-face front">Click Me</div>
+      <div class="button-face top">Go!</div>
     </div>
   </div>
 
