--- a/examples/index.html
+++ b/examples/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Slim 3D Flip Button</title>
+  <title>3D Depth Flip Button</title>
   <style>
     body {
       background-color: #121212;
@@ -18,16 +18,17 @@
       perspective: 1000px;
     }
 
-    .flip-container {
+    .flip-box {
       width: 160px;
       height: 50px;
       position: relative;
       transform-style: preserve-3d;
+      transform: rotateX(0deg);
       transition: transform 1s ease;
       cursor: pointer;
     }
 
-    .flip-container:hover {
+    .flip-box:hover {
       transform: rotateX(180deg);
     }
 
@@ -42,27 +43,50 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      border-radius: 10px;
       border: 2px solid #d47900;
-      backface-visibility: hidden;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+      border-radius: 8px;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
     }
 
     .front {
-      transform: rotateX(0deg) translateZ(1px);
+      transform: translateZ(10px);
+      backface-visibility: hidden;
     }
 
     .back {
-      transform: rotateX(180deg) translateZ(1px);
+      transform: rotateX(180deg) translateZ(10px);
+      backface-visibility: hidden;
+    }
+
+    .top, .bottom {
+      position: absolute;
+      width: 100%;
+      height: 20px;
+      background-color: #e67e00;
+      left: 0;
+    }
+
+    .top {
+      transform: rotateX(90deg) translateZ(25px);
+      top: 0;
+      border-radius: 8px 8px 0 0;
+    }
+
+    .bottom {
+      transform: rotateX(-90deg) translateZ(25px);
+      bottom: 0;
+      border-radius: 0 0 8px 8px;
     }
   </style>
 </head>
 <body>
 
   <div class="button-wrapper">
-    <div class="flip-container">
+    <div class="flip-box">
       <div class="face front">Click Me</div>
-      <div class="face back">Hello Again</div>
+      <div class="face back">Welcome!</div>
+      <div class="top"></div>
+      <div class="bottom"></div>
     </div>
   </div>
 
