--- a/examples/circle-images.html
+++ b/examples/circle-images.html
@@ -2,55 +2,49 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>3D Rotating Circle Image Gallery</title>
+  <title>3D Image Carousel</title>
   <style>
     body {
       margin: 0;
-      background-color: #f4f4f4;
-      font-family: 'Arial', sans-serif;
+      background: #121212;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
       overflow: hidden;
+      font-family: sans-serif;
     }
 
-    .circle-image-block {
+    .carousel-container {
+      width: 400px;
+      height: 400px;
       position: relative;
-      width: 300px;
-      height: 300px;
       transform-style: preserve-3d;
-      animation: rotateCircle 20s linear infinite;
+      animation: spin 20s linear infinite;
     }
 
-    .circle-item {
-      position: absolute;
+    .carousel-item {
       width: 100px;
       height: 100px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
       transform-style: preserve-3d;
-      transform-origin: center;
+      transform-origin: center center;
       border-radius: 50%;
       overflow: hidden;
-      perspective: 1000px;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
     }
 
-    .circle-image-wrapper {
-      width: 100%;
-      height: 100%;
-      border-radius: 50%;
-      transform: rotateX(0deg) rotateY(0deg);
-      transition: transform 0.6s ease;
-      backface-visibility: hidden;
-    }
-
-    .circle-image-wrapper img {
+    .carousel-item img {
       width: 100%;
       height: 100%;
       object-fit: cover;
       border-radius: 50%;
+      pointer-events: none;
     }
 
-    @keyframes rotateCircle {
+    @keyframes spin {
       from {
         transform: rotateY(0deg);
       }
@@ -62,38 +56,32 @@
 </head>
 <body>
 
-  <div class="circle-image-block">
-    <div class="circle-item" style="transform: rotateY(0deg) translateZ(150px);">
-      <div class="circle-image-wrapper">
-        <img src="https://picsum.photos/200?random=1" alt="Random 1">
-      </div>
-    </div>
-    <div class="circle-item" style="transform: rotateY(60deg) translateZ(150px);">
-      <div class="circle-image-wrapper">
-        <img src="https://picsum.photos/200?random=2" alt="Random 2">
-      </div>
-    </div>
-    <div class="circle-item" style="transform: rotateY(120deg) translateZ(150px);">
-      <div class="circle-image-wrapper">
-        <img src="https://picsum.photos/200?random=3" alt="Random 3">
-      </div>
-    </div>
-    <div class="circle-item" style="transform: rotateY(180deg) translateZ(150px);">
-      <div class="circle-image-wrapper">
-        <img src="https://picsum.photos/200?random=4" alt="Random 4">
-      </div>
-    </div>
-    <div class="circle-item" style="transform: rotateY(240deg) translateZ(150px);">
-      <div class="circle-image-wrapper">
-        <img src="https://picsum.photos/200?random=5" alt="Random 5">
-      </div>
-    </div>
-    <div class="circle-item" style="transform: rotateY(300deg) translateZ(150px);">
-      <div class="circle-image-wrapper">
-        <img src="https://picsum.photos/200?random=6" alt="Random 6">
-      </div>
-    </div>
+  <div class="carousel-container" id="carousel">
+    <!-- Images will be inserted via JS -->
   </div>
+
+  <script>
+    const imageCount = 8;
+    const radius = 150;
+    const container = document.getElementById('carousel');
+
+    for (let i = 0; i < imageCount; i++) {
+      const angle = (360 / imageCount) * i;
+      const item = document.createElement('div');
+      item.className = 'carousel-item';
+      item.style.transform = `
+        rotateY(${angle}deg)
+        translateZ(${radius}px)
+      `;
+
+      const img = document.createElement('img');
+      img.src = `https://picsum.photos/200?random=${i + 1}`;
+      img.alt = `Image ${i + 1}`;
+
+      item.appendChild(img);
+      container.appendChild(item);
+    }
+  </script>
 
 </body>
 </html>
