--- a/examples/circle-images.html
+++ b/examples/circle-images.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>3D Image Carousel</title>
+  <title>3D Rotating Image Carousel</title>
   <style>
     body {
       margin: 0;
@@ -57,7 +57,7 @@
 <body>
 
   <div class="carousel-container" id="carousel">
-    <!-- Images will be inserted via JS -->
+    <!-- Images will be inserted via JavaScript -->
   </div>
 
   <script>
