--- a/template1/index.html
+++ b/template1/index.html
@@ -1,54 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pluto Template Recreation</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rays Falling Down Effect</title>
+    <!-- Google Fonts for modern typography -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Rays Background Section -->
+    <section id="rays-section">
+        <div class="rays-container">
+            <!-- Rays will be dynamically added via JavaScript -->
+        </div>
+        <div class="content">
+            <h1>MarketingFlow Inspired Background</h1>
+            <p>Watch the rays fall gracefully in the background.</p>
+        </div>
+    </section>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="container">
-      <h1>We build brands that stand out</h1>
-      <p>Creative agency helping you craft a bold digital presence.</p>
-      <a href="#" class="btn">View Our Work</a>
-    </div>
-  </section>
-
-  <!-- Features Section -->
-  <section class="features">
-    <div class="container">
-      <div class="feature">
-        <h2>Strategy</h2>
-        <p>We develop comprehensive strategies tailored to your brand's needs.</p>
-      </div>
-      <div class="feature">
-        <h2>Design</h2>
-        <p>Our designs are modern, user-friendly, and visually compelling.</p>
-      </div>
-      <div class="feature">
-        <h2>Development</h2>
-        <p>We build responsive and high-performing websites.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Testimonials Section -->
-  <section class="testimonials">
-    <div class="container">
-      <h2>Real results, Real clients</h2>
-      <div class="testimonial">
-        <p>"Pluto transformed our online presence. Our traffic doubled!"</p>
-        <span>- Alex Joon, Cloud Developer Engineer</span>
-      </div>
-      <div class="testimonial">
-        <p>"Their team is creative, responsive, and truly understands our vision."</p>
-        <span>- Jamie Lee, Marketing Director</span>
-      </div>
-    </div>
-  </section>
-
+    <!-- Link to external JavaScript file -->
+    <script src="script.js"></script>
 </body>
 </html>
