--- a/template1/index.html
+++ b/template1/index.html
@@ -22,6 +22,6 @@
     </section>
 
     <!-- Link to external JavaScript file -->
-    <script src="script.js"></script>
+    <script src="javascript.js"></script>
 </body>
 </html>
