--- a/sidebar/index.html
+++ b/sidebar/index.html
@@ -29,6 +29,6 @@
     </aside>
 
     <!-- Link to external JavaScript file -->
-    <script src="script.js"></script>
+    <script src="javascript.js"></script>
 </body>
 </html>
