--- a/sidebar/index.html
+++ b/sidebar/index.html
@@ -15,8 +15,11 @@
     <!-- Sidebar Section -->
     <aside id="sidebar" class="glass">
         <div class="sidebar-header">
-            <img src="https://via.placeholder.com/100" alt="Profile Photo" class="profile-photo">
-            <h1 class="sidebar-name">Your Name</h1>
+            <img src="https://via.placeholder.com/80" alt="Profile Photo" class="profile-photo">
+            <div class="sidebar-info">
+                <h1 class="sidebar-name">Your Name</h1>
+                <p class="sidebar-email">your.email@example.com</p>
+            </div>
         </div>
         <nav class="sidebar-nav">
             <a href="#about" class="nav-button"><i class="fas fa-user"></i> About</a>
