--- a/sidebar1/index.html
+++ b/sidebar1/index.html
@@ -15,6 +15,9 @@
     <!-- Navbar Section -->
     <nav id="navbar" class="glass">
         <div class="navbar-container">
+            <div class="navbar-logo">
+                <img src="https://via.placeholder.com/40" alt="Logo" class="logo-image">
+            </div>
             <button class="navbar-toggle"><i class="fas fa-bars"></i></button>
             <ul class="nav-menu">
                 <li><a href="#about" class="nav-button"><i class="fas fa-user"></i> About</a></li>
@@ -27,6 +30,6 @@
     </nav>
 
     <!-- Link to external JavaScript file -->
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
