--- a/sidebar1/index.html
+++ b/sidebar1/index.html
@@ -30,6 +30,6 @@
     </nav>
 
     <!-- Link to external JavaScript file -->
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
