--- a/sidebar1/index.html
+++ b/sidebar1/index.html
@@ -1,35 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar Section</title>
-    <!-- Google Fonts for modern typography -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Simple Nav Bar</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <!-- Navbar Section -->
-    <nav id="navbar" class="glass">
-        <div class="navbar-container">
-            <div class="navbar-logo">
-                <img src="https://via.placeholder.com/40" alt="Logo" class="logo-image">
-            </div>
-            <button class="navbar-toggle"><i class="fas fa-bars"></i></button>
-            <ul class="nav-menu">
-                <li><a href="#about" class="nav-button"><i class="fas fa-user"></i> About</a></li>
-                <li><a href="resume.pdf" class="nav-button" download><i class="fas fa-file-alt"></i> Resume</a></li>
-                <li><a href="#portfolio" class="nav-button"><i class="fas fa-briefcase"></i> Portfolio</a></li>
-                <li><a href="#blog" class="nav-button"><i class="fas fa-blog"></i> Blog</a></li>
-                <li><a href="#contact" class="nav-button"><i class="fas fa-envelope"></i> Contact</a></li>
-            </ul>
-        </div>
-    </nav>
 
-    <!-- Link to external JavaScript file -->
-    <script src="scripts.js"></script>
+  <nav class="nav-bar">
+    <ul class="nav-links">
+      <li><a href="#">About</a></li>
+      <li><a href="#">Resume</a></li>
+      <li><a href="#">Portfolio</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+
 </body>
 </html>
