--- a/sidebar1/index.html
+++ b/sidebar1/index.html
@@ -3,25 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Navbar with Logo</title>
+  <title>Fixed Sidebar Nav</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-  <nav class="nav-bar">
-    <div class="nav-container">
-      <div class="logo">
-        <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Logo"></a>
-      </div>
-      <ul class="nav-links">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Resume</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
+  <!-- Sidebar -->
+  <nav class="sidebar">
+    <div class="logo">
+      <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Logo"></a>
     </div>
+    <ul class="nav-links">
+      <li><a href="#">About</a></li>
+      <li><a href="#">Resume</a></li>
+      <li><a href="#">Portfolio</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
   </nav>
+
+  <!-- Main Content -->
+  <div class="main-content">
+    <section>
+      <h1>Welcome to My Portfolio</h1>
+      <p>Scroll down to see the sticky sidebar stay fixed.</p>
+      <p>Lorem ipsum dolor sit amet... (repeat to simulate scroll)</p>
+    </section>
+    <section style="height: 2000px;"></section>
+  </div>
 
 </body>
 </html>
