--- a/sidebar1/index.html
+++ b/sidebar1/index.html
@@ -3,15 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Floating Sidebar Nav</title>
+  <title>Floating Cloud Sidebar</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-  <!-- Floating Sidebar -->
   <nav id="floating-sidebar">
-    <div class="logo">
-      <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Logo"></a>
+    <div class="nav-header">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Logo" class="logo">
     </div>
     <ul class="nav-links">
       <li><a href="#">About</a></li>
@@ -22,12 +21,11 @@
     </ul>
   </nav>
 
-  <!-- Main Content -->
   <div class="main-content">
     <section>
-      <h1>Dynamic Sidebar Example</h1>
-      <p>Scroll down and watch the sidebar gently follow the page.</p>
-      <p style="margin-bottom: 2000px;">Lorem ipsum dolor sit amet... (more text to simulate scroll)</p>
+      <h1>Floating Cloud Navigation</h1>
+      <p>Scroll to see the sidebar follow dynamically.</p>
+      <p style="margin-bottom: 2000px;">More text to simulate a long page...</p>
     </section>
   </div>
 
