--- a/sidebar1/index.html
+++ b/sidebar1/index.html
@@ -3,16 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Floating Cloud Sidebar</title>
+  <title>Cloud Nav Bar</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-  <nav id="floating-sidebar">
-    <div class="nav-header">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Logo" class="logo">
-    </div>
-    <ul class="nav-links">
+  <!-- Top Cloud Nav -->
+  <nav class="cloud-nav">
+    <ul class="cloud-links">
       <li><a href="#">About</a></li>
       <li><a href="#">Resume</a></li>
       <li><a href="#">Portfolio</a></li>
@@ -21,14 +19,12 @@
     </ul>
   </nav>
 
+  <!-- Page Content -->
   <div class="main-content">
-    <section>
-      <h1>Floating Cloud Navigation</h1>
-      <p>Scroll to see the sidebar follow dynamically.</p>
-      <p style="margin-bottom: 2000px;">More text to simulate a long page...</p>
-    </section>
+    <h1>Floating Cloud Buttons Nav</h1>
+    <p>Scroll down and watch the navbar stay fixed with floating cloud buttons.</p>
+    <p style="margin-bottom: 2000px;">(Page content continues...)</p>
   </div>
 
-  <script src="scripts.js"></script>
 </body>
 </html>
