--- a/sidebar1/index.html
+++ b/sidebar1/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Cloud Nav Bar</title>
+  <title>True Cloud Nav Bar</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-  <!-- Top Cloud Nav -->
-  <nav class="cloud-nav">
-    <ul class="cloud-links">
+  <nav class="cloud-navbar">
+    <ul class="cloud-nav">
       <li><a href="#">About</a></li>
       <li><a href="#">Resume</a></li>
       <li><a href="#">Portfolio</a></li>
@@ -19,12 +18,11 @@
     </ul>
   </nav>
 
-  <!-- Page Content -->
-  <div class="main-content">
-    <h1>Floating Cloud Buttons Nav</h1>
-    <p>Scroll down and watch the navbar stay fixed with floating cloud buttons.</p>
-    <p style="margin-bottom: 2000px;">(Page content continues...)</p>
-  </div>
+  <main class="main-content">
+    <h1>Cloud Navigation Bar</h1>
+    <p>These are real cloud-shaped buttons with 3D effects!</p>
+    <p style="margin-bottom: 1500px;">Scroll down to test how the top navbar stays fixed and cloud buttons float.</p>
+  </main>
 
 </body>
 </html>
