--- a/sidebar1/index.html
+++ b/sidebar1/index.html
@@ -3,25 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>True Cloud Nav Bar</title>
+  <title>True CSS Cloud Buttons</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
   <nav class="cloud-navbar">
     <ul class="cloud-nav">
-      <li><a href="#">About</a></li>
-      <li><a href="#">Resume</a></li>
-      <li><a href="#">Portfolio</a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="#"><div class="cloud"><span>About</span></div></a></li>
+      <li><a href="#"><div class="cloud"><span>Resume</span></div></a></li>
+      <li><a href="#"><div class="cloud"><span>Portfolio</span></div></a></li>
+      <li><a href="#"><div class="cloud"><span>Blog</span></div></a></li>
+      <li><a href="#"><div class="cloud"><span>Contact</span></div></a></li>
     </ul>
   </nav>
 
   <main class="main-content">
-    <h1>Cloud Navigation Bar</h1>
-    <p>These are real cloud-shaped buttons with 3D effects!</p>
-    <p style="margin-bottom: 1500px;">Scroll down to test how the top navbar stays fixed and cloud buttons float.</p>
+    <h1>CSS Cloud Navigation</h1>
+    <p>Buttons are built with pure CSS to look like real clouds ☁️</p>
+    <p style="margin-bottom: 1500px;">Scroll down to see how they float at the top.</p>
   </main>
 
 </body>
