--- a/sidebar1/index.html
+++ b/sidebar1/index.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>True CSS Cloud Buttons</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cloud Navbar Section</title>
+    <!-- Google Fonts for modern typography -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-  <nav class="cloud-navbar">
-    <ul class="cloud-nav">
-      <li><a href="#"><div class="cloud"><span>About</span></div></a></li>
-      <li><a href="#"><div class="cloud"><span>Resume</span></div></a></li>
-      <li><a href="#"><div class="cloud"><span>Portfolio</span></div></a></li>
-      <li><a href="#"><div class="cloud"><span>Blog</span></div></a></li>
-      <li><a href="#"><div class="cloud"><span>Contact</span></div></a></li>
-    </ul>
-  </nav>
-
-  <main class="main-content">
-    <h1>CSS Cloud Navigation</h1>
-    <p>Buttons are built with pure CSS to look like real clouds ☁️</p>
-    <p style="margin-bottom: 1500px;">Scroll down to see how they float at the top.</p>
-  </main>
-
+    <!-- Navbar Section -->
+    <nav class="cloud-navbar">
+        <ul class="cloud-nav">
+            <li><a href="#about"><div class="cloud"><i class="fas fa-user"></i><span>About</span></div></a></li>
+            <li><a href="resume.pdf" download><div class="cloud"><i class="fas fa-file-alt"></i><span>Resume</span></div></a></li>
+            <li><a href="#portfolio"><div class="cloud"><i class="fas fa-briefcase"></i><span>Portfolio</span></div></a></li>
+            <li><a href="#blog"><div class="cloud"><i class="fas fa-blog"></i><span>Blog</span></div></a></li>
+            <li><a href="#contact"><div class="cloud"><i class="fas fa-envelope"></i><span>Contact</span></div></a></li>
+        </ul>
+    </nav>
 </body>
 </html>
