--- a/sidebar1/index.html
+++ b/sidebar1/index.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cloud Navbar Section</title>
-    <!-- Google Fonts for modern typography -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Floating Cloud Sidebar</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <!-- Navbar Section -->
-    <nav class="cloud-navbar">
-        <ul class="cloud-nav">
-            <li><a href="#about"><div class="cloud"><i class="fas fa-user"></i><span>About</span></div></a></li>
-            <li><a href="resume.pdf" download><div class="cloud"><i class="fas fa-file-alt"></i><span>Resume</span></div></a></li>
-            <li><a href="#portfolio"><div class="cloud"><i class="fas fa-briefcase"></i><span>Portfolio</span></div></a></li>
-            <li><a href="#blog"><div class="cloud"><i class="fas fa-blog"></i><span>Blog</span></div></a></li>
-            <li><a href="#contact"><div class="cloud"><i class="fas fa-envelope"></i><span>Contact</span></div></a></li>
-        </ul>
-    </nav>
+
+  <nav id="floating-sidebar">
+    <div class="nav-header">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Logo" class="logo">
+    </div>
+    <ul class="nav-links">
+      <li><a href="#">About</a></li>
+      <li><a href="#">Resume</a></li>
+      <li><a href="#">Portfolio</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+
+  <div class="main-content">
+    <section>
+      <h1>Floating Cloud Navigation</h1>
+      <p>Scroll to see the sidebar follow dynamically.</p>
+      <p style="margin-bottom: 2000px;">More text to simulate a long page...</p>
+    </section>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
