--- a/sidebar1/index.html
+++ b/sidebar1/index.html
@@ -3,34 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Floating Sidebar Nav</title>
+  <title>Top Floating Nav</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-  <!-- Floating Sidebar -->
-  <nav id="floating-sidebar">
-    <div class="logo">
-      <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Logo"></a>
+  <!-- Top Navigation Bar -->
+  <nav id="top-navbar">
+    <div class="nav-container">
+      <div class="logo">
+        <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Logo"></a>
+      </div>
+      <ul class="nav-links">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Resume</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
     </div>
-    <ul class="nav-links">
-      <li><a href="#">About</a></li>
-      <li><a href="#">Resume</a></li>
-      <li><a href="#">Portfolio</a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
   </nav>
 
   <!-- Main Content -->
   <div class="main-content">
     <section>
-      <h1>Dynamic Sidebar Example</h1>
-      <p>Scroll down and watch the sidebar gently follow the page.</p>
+      <h1>Top Navbar Example</h1>
+      <p>Scroll down and the navbar stays pinned at the top.</p>
       <p style="margin-bottom: 2000px;">Lorem ipsum dolor sit amet... (more text to simulate scroll)</p>
     </section>
   </div>
 
-  <script src="script.js"></script>
 </body>
 </html>
