--- a/hero-section/index.html
+++ b/hero-section/index.html
@@ -1,25 +1,53 @@
-<header class="hero-section">
-  <!-- Video wrapper keeps it centered with margin -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Full Width Header Video</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+
+  <!-- Video Header Section -->
+  <header class="hero-section">
+    <!-- Video wrapper keeps it centered with margin -->
   <div class="video-wrapper">
     <video autoplay muted loop playsinline class="hero-video">
-      <source src="images/video02.mp4" type="video/mp4" />
+      <source src="your-video.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
   </div>
 
-  <!-- Nav bar overlay -->
-  <nav class="top-navbar">
-    <div class="nav-container">
-      <div class="logo">
-        <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Logo"></a>
+    <!-- Top Navigation Over Video -->
+    <nav class="top-navbar">
+      <div class="nav-container">
+        <div class="logo">
+          <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Logo"></a>
+        </div>
+        <ul class="nav-links">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Resume</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
       </div>
-      <ul class="nav-links">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Resume</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
+    </nav>
+
+    <!-- Optional Hero Text Overlay -->
+    <div class="hero-text">
+      <h1>Welcome to My Website</h1>
+      <p>Crafting Clouds and Code</p>
     </div>
-  </nav>
-</header>
+  </header>
+
+  <!-- Main Content -->
+  <main class="main-content">
+    <section>
+      <h2>About the Project</h2>
+      <p>Scroll down to explore more content below the hero section...</p>
+    </section>
+  </main>
+
+</body>
+</html>
