--- a/hero-section/index.html
+++ b/hero-section/index.html
@@ -13,7 +13,7 @@
     <!-- Video wrapper keeps it centered with margin -->
   <div class="video-wrapper">
     <video autoplay muted loop playsinline class="hero-video">
-      <source src="your-video.mp4" type="video/mp4" />
+      <source src="images/video02.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
   </div>
