--- a/hero-section/index.html
+++ b/hero-section/index.html
@@ -43,10 +43,50 @@
 
   <!-- Main Content -->
   <main class="main-content">
-    <section>
-      <h2>About the Project</h2>
-      <p>Scroll down to explore more content below the hero section...</p>
-    </section>
+   <section class="resume-section">
+  <div class="resume-container">
+    <h2>Resume Overview</h2>
+    <p class="resume-description">
+      Here's a snapshot of my background, experience, and skills.
+    </p>
+
+    <div class="resume-features">
+      <div class="feature-card">
+        <h3>🧠 Skills</h3>
+        <ul>
+          <li>AWS / Cloud Infrastructure</li>
+          <li>Python, JavaScript, HTML/CSS</li>
+          <li>CI/CD & DevOps</li>
+        </ul>
+      </div>
+
+      <div class="feature-card">
+        <h3>💼 Experience</h3>
+        <ul>
+          <li>Cloud Developer – TechCorp (2023–Present)</li>
+          <li>Web Developer – Freelance (2021–2023)</li>
+        </ul>
+      </div>
+
+      <div class="feature-card">
+        <h3>🎓 Education</h3>
+        <ul>
+          <li>AWS Cloud Practitioner – AWS Academy</li>
+          <li>B.S. in Information Technology</li>
+        </ul>
+      </div>
+
+      <div class="feature-card">
+        <h3>📜 Certifications</h3>
+        <ul>
+          <li>AWS Certified Solutions Architect</li>
+          <li>Google IT Support Professional</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+
   </main>
 
 </body>
