--- a/hero-section/index.html
+++ b/hero-section/index.html
@@ -40,6 +40,29 @@
       <p>Crafting Clouds and Code</p>
     </div>
   </header>
+<section class="about-section">
+  <div class="about-container">
+    <div class="about-content">
+      <div class="about-image">
+        <img src="https://via.placeholder.com/400x400" alt="Your Photo">
+      </div>
+      <div class="about-text">
+        <h2>About Me</h2>
+        <p>
+          I'm a passionate Cloud Developer focused on building secure, scalable, and user-friendly applications.
+          With a background in full-stack web development and cloud infrastructure, I love turning complex
+          ideas into elegant digital solutions.
+        </p>
+        <ul class="about-features">
+          <li>🚀 AWS Certified Cloud Practitioner</li>
+          <li>💡 Strong focus on security and scalability</li>
+          <li>🛠️ Experienced in Python, JavaScript, HTML/CSS</li>
+          <li>🌐 Portfolio includes web apps, APIs, and infrastructure as code</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- Main Content -->
   <main class="main-content">
