--- a/hero-section/index.html
+++ b/hero-section/index.html
@@ -8,21 +8,14 @@
 </head>
 <body>
 
-  <!-- Video Header Section -->
-  <header class="hero-section">
-    <!-- Video wrapper keeps it centered with margin -->
-  <div class="video-wrapper">
-    <video autoplay muted loop playsinline class="hero-video">
-      <source src="images/video02.mp4" type="video/mp4" />
-      Your browser does not support the video tag.
-    </video>
-  </div>
-
-    <!-- Top Navigation Over Video -->
+  <!-- Header: Logo and Navigation -->
+  <header>
     <nav class="top-navbar">
       <div class="nav-container">
         <div class="logo">
-          <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Logo"></a>
+          <a href="#">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Logo">
+          </a>
         </div>
         <ul class="nav-links">
           <li><a href="#">About</a></li>
@@ -33,83 +26,95 @@
         </ul>
       </div>
     </nav>
+  </header>
 
-    <!-- Optional Hero Text Overlay -->
+  <!-- Hero Section with Video -->
+  <section class="hero-section">
+    <div class="video-wrapper">
+      <video autoplay muted loop playsinline class="hero-video" aria-label="Background video">
+        <source src="images/video02.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
+    </div>
+
     <div class="hero-text">
       <h1>Welcome to My Website</h1>
       <p>Crafting Clouds and Code</p>
     </div>
-  </header>
-<section class="about-section">
-  <div class="about-container">
-    <div class="about-content">
-      <div class="about-image">
-        <img src="https://via.placeholder.com/400x400" alt="Your Photo">
-      </div>
-      <div class="about-text">
-        <h2>About Me</h2>
-        <p>
-          I'm a passionate Cloud Developer focused on building secure, scalable, and user-friendly applications.
-          With a background in full-stack web development and cloud infrastructure, I love turning complex
-          ideas into elegant digital solutions.
-        </p>
-        <ul class="about-features">
-          <li>🚀 AWS Certified Cloud Practitioner</li>
-          <li>💡 Strong focus on security and scalability</li>
-          <li>🛠️ Experienced in Python, JavaScript, HTML/CSS</li>
-          <li>🌐 Portfolio includes web apps, APIs, and infrastructure as code</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</section>
+  </section>
 
   <!-- Main Content -->
   <main class="main-content">
-    
-   <section class="resume-section">
-  <div class="resume-container">
-    <h2>Resume Overview</h2>
-    <p class="resume-description">
-      Here's a snapshot of my background, experience, and skills.
-    </p>
 
-    <div class="resume-features">
-      <div class="feature-card">
-        <h3>🧠 Skills</h3>
-        <ul>
-          <li>AWS / Cloud Infrastructure</li>
-          <li>Python, JavaScript, HTML/CSS</li>
-          <li>CI/CD & DevOps</li>
-        </ul>
+    <!-- About Section -->
+    <section class="about-section">
+      <div class="about-container">
+        <div class="about-content">
+          <div class="about-image">
+            <img src="https://via.placeholder.com/400x400" alt="Your Photo">
+          </div>
+          <div class="about-text">
+            <h2>About Me</h2>
+            <p>
+              I'm a passionate Cloud Developer focused on building secure, scalable, and user-friendly applications.
+              With a background in full-stack web development and cloud infrastructure, I love turning complex
+              ideas into elegant digital solutions.
+            </p>
+            <ul class="about-features">
+              <li>🚀 AWS Certified Cloud Practitioner</li>
+              <li>💡 Strong focus on security and scalability</li>
+              <li>🛠️ Experienced in Python, JavaScript, HTML/CSS</li>
+              <li>🌐 Portfolio includes web apps, APIs, and infrastructure as code</li>
+            </ul>
+          </div>
+        </div>
       </div>
+    </section>
 
-      <div class="feature-card">
-        <h3>💼 Experience</h3>
-        <ul>
-          <li>Cloud Developer – TechCorp (2023–Present)</li>
-          <li>Web Developer – Freelance (2021–2023)</li>
-        </ul>
-      </div>
+    <!-- Resume Section -->
+    <section class="resume-section">
+      <div class="resume-container">
+        <h2>Resume Overview</h2>
+        <p class="resume-description">
+          Here's a snapshot of my background, experience, and skills.
+        </p>
 
-      <div class="feature-card">
-        <h3>🎓 Education</h3>
-        <ul>
-          <li>AWS Cloud Practitioner – AWS Academy</li>
-          <li>B.S. in Information Technology</li>
-        </ul>
-      </div>
+        <div class="resume-features">
+          <div class="feature-card">
+            <h3>🧠 Skills</h3>
+            <ul>
+              <li>AWS / Cloud Infrastructure</li>
+              <li>Python, JavaScript, HTML/CSS</li>
+              <li>CI/CD & DevOps</li>
+            </ul>
+          </div>
 
-      <div class="feature-card">
-        <h3>📜 Certifications</h3>
-        <ul>
-          <li>AWS Certified Solutions Architect</li>
-          <li>Google IT Support Professional</li>
-        </ul>
+          <div class="feature-card">
+            <h3>💼 Experience</h3>
+            <ul>
+              <li>Cloud Developer – TechCorp (2023–Present)</li>
+              <li>Web Developer – Freelance (2021–2023)</li>
+            </ul>
+          </div>
+
+          <div class="feature-card">
+            <h3>🎓 Education</h3>
+            <ul>
+              <li>AWS Cloud Practitioner – AWS Academy</li>
+              <li>B.S. in Information Technology</li>
+            </ul>
+          </div>
+
+          <div class="feature-card">
+            <h3>📜 Certifications</h3>
+            <ul>
+              <li>AWS Certified Solutions Architect</li>
+              <li>Google IT Support Professional</li>
+            </ul>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</section>
+    </section>
 
   </main>
 
